_build/_log
### Starting build.
# Target: gui.mli.depends, tags: { package(ANSITerminal), package(Graphics), package(camlimages), package(camlimages.jpeg), package(camlimages.png), package(graphics), package(oUnit), package(str), package(yojson), extension:mli, file:gui.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -package yojson -package str -package ANSITerminal -package Graphics -package camlimages -package camlimages.png -package camlimages.jpeg -package graphics -modules gui.mli > gui.mli.depends # cached
# Target: game.mli.depends, tags: { package(ANSITerminal), package(Graphics), package(camlimages), package(camlimages.jpeg), package(camlimages.png), package(graphics), package(oUnit), package(str), package(yojson), extension:mli, file:game.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -package yojson -package str -package ANSITerminal -package Graphics -package camlimages -package camlimages.png -package camlimages.jpeg -package graphics -modules game.mli > game.mli.depends # cached
# Target: game.cmi, tags: { package(ANSITerminal), package(Graphics), package(camlimages), package(camlimages.jpeg), package(camlimages.png), package(graphics), package(oUnit), package(str), package(yojson), byte, compile, extension:mli, file:game.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package oUnit -package yojson -package str -package ANSITerminal -package Graphics -package camlimages -package camlimages.png -package camlimages.jpeg -package graphics -o game.cmi game.mli # cached
# Target: gui.cmi, tags: { package(ANSITerminal), package(Graphics), package(camlimages), package(camlimages.jpeg), package(camlimages.png), package(graphics), package(oUnit), package(str), package(yojson), byte, compile, extension:mli, file:gui.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package oUnit -package yojson -package str -package ANSITerminal -package Graphics -package camlimages -package camlimages.png -package camlimages.jpeg -package graphics -o gui.cmi gui.mli # cached
# Target: gui.ml.depends, tags: { package(ANSITerminal), package(Graphics), package(camlimages), package(camlimages.jpeg), package(camlimages.png), package(graphics), package(oUnit), package(str), package(yojson), extension:ml, file:gui.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -package yojson -package str -package ANSITerminal -package Graphics -package camlimages -package camlimages.png -package camlimages.jpeg -package graphics -modules gui.ml > gui.ml.depends
+ ocamlfind ocamldep -package oUnit -package yojson -package str -package ANSITerminal -package Graphics -package camlimages -package camlimages.png -package camlimages.jpeg -package graphics -modules gui.ml > gui.ml.depends
File "gui.ml", line 306, characters 58-62:
306 |         if b then draw_image bomb x y; draw_bomb_ob_aux t else draw_b
                                                                ^^^^
Error: Syntax error: 'end' expected
File "gui.ml", line 302, characters 4-9:
302 |     begin 
          ^^^^^
  This 'begin' might be unmatched
Command exited with code 2.
# Compilation unsuccessful.
